--- a/mcginnis.org
+++ b/mcginnis.org
@@ -105,10 +105,7 @@
     - [[#default-props-for-functional-components][default props for functional components]]
   - [[#code-sharing][code sharing]]
     - [[#higher-order-components][higher order components]]
-    - [[#recall-higher-order-functions][recall higher order functions]]
-    - [[#back-to-higher-order-components][back to higher-order components]]
-    - [[#more-hoc-details][more HOC details]]
-    - [[#hoc-and-inversion-of-control][HOC and inversion of control]]
+    - [[#render-props][render props]]
 
 * modern js
 ** lecture 1
@@ -1579,20 +1576,20 @@
     Taking =Animal= as our example:
     #+begin_src js
       function animalMethods = {
-          eat = function (amount) {
-              console.log(`${this.name} is eating`);
-              this.energy += amount;
-          }
+        eat = function (amount) {
+          console.log(`${this.name} is eating`);
+          this.energy += amount;
+        }
 
-          sleep = function(length) {
-              console.log(`${this.name} is sleeping`);
-              this.energy += length;
-          }
+        sleep = function(length) {
+          console.log(`${this.name} is sleeping`);
+          this.energy += length;
+        }
 
-          play = function(length) {
-              console.log(`${this.name} is playing`);
-              this.energy -= length;
-          }
+        play = function(length) {
+          console.log(`${this.name} is playing`);
+          this.energy -= length;
+        }
       }
 
       function Animal (name, energy) {
@@ -1702,7 +1699,7 @@
     every instance of the function =Animal= will now have access to these methods. nice.
 
 *** psuedo-classical instantiation
-
+    
     why is javascript so lame? why does it not already support the features we created using
     prototypes and shared methods? actually, it does via the =new= keyword. using =new=, we can define a
     constructor function that elides the call to =Object.create= its =return= statement because it does
@@ -1933,7 +1930,7 @@
 *** creating new agnostic constructor functions
 
     how do you ensure a constructor function is always called with =new=? otherwise =this= is never
-    constructor nor returned implicitly. to enforce this, realize that the =this= instance inside the
+    constructed nor returned implicitly. to enforce this, realize that the =this= instance inside the
     constructor, if correctly called with =new=, will be an =instanceOf= that class. thus, we could do
     the following to enforce the usage of =new=:
     #+begin_src js
@@ -5297,7 +5294,7 @@
 ***** re-setting a listener
       same as re-fetching data, use =componentDidUpdate=
 
-**** Unmounting
+**** unmounting
 
      what would we want to do when a component, and its node, gets removed from the DOM? /cleanup/.
 
@@ -5587,260 +5584,515 @@
     - our problem: add tooltip hover logic to each component without code duplication
     - our solution: *higher order components*
 
-*** recall higher order functions
+**** recall higher order functions
 
-    that's really it, just recall how, in JS, functions are first class citizens and can be passed
-    around just like any other value:
+     that's really it, just recall how, in JS, functions are first class citizens and can be passed
+     around just like any other value:
 
-    #+begin_src js
-      function hello (name) {
-        console.log(`Hello, ${name}!`)
-      }
+     #+begin_src js
+       function hello (name) {
+         console.log(`Hello, ${name}!`)
+       }
 
-      function hola (nombre) {
-        console.log(`¡Hola, ${nombre}!`)
-      }
+       function hola (nombre) {
+         console.log(`¡Hola, ${nombre}!`)
+       }
 
-      function buildGreeting(greetingFn, name) {
-        return function () { return greetingFn(name); };
-      }
+       function buildGreeting(greetingFn, name) {
+         return function () { return greetingFn(name); };
+       }
 
-      holaFn = buildGreeting(hola, "elias");
-      helloFn = buildGreeting(hello, "elias");
+       holaFn = buildGreeting(hola, "elias");
+       helloFn = buildGreeting(hello, "elias");
 
-      holaFn(); // ¡Hola, elias!
-      helloFn(); // Hello, elias!
-    #+end_src
+       holaFn(); // ¡Hola, elias!
+       helloFn(); // Hello, elias!
+     #+end_src
 
-    =buildGreeting= is a *higher order function*: we pass it two arguments, one of which is a function
-    itself. =buildGreeting= uses this other function to create yet a new function, which is a greeting
-    function we customized via the passed-in function. the passed-in function is called a *callback*
-    function.
+     =buildGreeting= is a *higher order function*: we pass it two arguments, one of which is a function
+     itself. =buildGreeting= uses this other function to create yet a new function, which is a greeting
+     function we customized via the passed-in function. the passed-in function is called a *callback*
+     function.
 
-    as a total aside, the fact we reduced the number of arguments from 2 to 1 by /partially applying/
-    them is an example of *partial application*.
+     as a total aside, the fact we reduced the number of arguments from 2 to 1 by /partially applying/
+     them is an example of *partial application*.
 
-    other examples of HO functions include utilizing methods like =.map=, which take a function to
-    apply to the input, and functions like =onClick=, which take functions and apply them to browser
-    events:
-    #+begin_src js
-      [1,2,3].map((i) => i + 5);
+     other examples of HO functions include utilizing methods like =.map=, which take a function to
+     apply to the input, and functions like =onClick=, which take functions and apply them to browser
+     events:
+     #+begin_src js
+       [1,2,3].map((i) => i + 5);
 
-      $('#btn').on('click', () =>
-        console.log('Callbacks are everywhere')
-      )
-    #+end_src
+       $('#btn').on('click', () =>
+         console.log('Callbacks are everywhere')
+       )
+     #+end_src
 
-*** back to higher-order components
+**** back to higher-order components
     
-    take the characteristics of higher order functions:
-    - are a function themselves
-    - take a *callback* function as an argument
-    - (can) return a new function by partial application
-      + this new function then applies the function we passed, possibly on remaining input
+     take the characteristics of higher order functions:
+     - are a function themselves
+     - take a *callback* function as an argument
+     - (can) return a new function by partial application
+       + this new function then applies the function we passed, possibly on remaining input
 
         
-    now apply this to higher order components and our problem with hover state:
-    - is a component
-    - takes a component as an argument
-    - return a new component
-    - the component returned renders the original component that was passed in
+     now apply this to higher order components and our problem with hover state:
+     - is a component
+     - takes a component as an argument
+     - return a new component
+     - the component returned renders the original component that was passed in
+
+       #+begin_src js
+         function higherOrderComponent (Component) {
+           return class extends React.Component {
+             render() {
+               return <Component />
+             }
+           }
+         }
+       #+end_src
+
+      
+     returning to hover state, we want a HOC that helps eliminate the duplication of the following
+     code:
+     #+begin_src js
+     state = { hovering: false }
+     mouseOver = () => this.setState({ hovering: true })
+     mouseOut = () => this.setState({ hovering: false })
+     #+end_src
+
+    
+     let's call this HOC =withHover=, which will then return us a new component that performs its
+     original behavior /and/ the new hovering logic, i.e.:
+     #+begin_src js
+       const InfoWithHover = withHover(Info);
+     #+end_src
+
+     yields the component:
+     #+begin_src js
+       function Info ({ hovering, height }) {
+         return (
+             <>
+             {hovering === true
+              ? <Tooltip id='info' />
+              : null}
+             <svg
+           className="Icon-svg Icon--hoverable-svg"
+           height={height}
+           viewBox="0 0 16 16" width="16">
+             <path d="M9 8a1 1 0 0 0-1-1H5.5a1 1 0 1 0 0 2H7v4a1 1 0 0 0 2 0zM4 0h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4zm4 5.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+             </svg>
+             </>
+         )
+       }
+     #+end_src
+
+     =withHover= needs to:
+     - take a component argument
+     - return a new component
+     - render the original component argument, passing it a hovering prop
+
+***** take a component
 
       #+begin_src js
-        function higherOrderComponent (Component) {
-          return class extends React.Component {
+        function withHover (Component) {
+          // todo
+        }
+      #+end_src
+
+***** return a new component
+     
+      #+begin_src js
+        function withHover (Component) {
+          return class WithHover extends React.Component {
+           // todo
+          }
+        }
+      #+end_src
+
+***** render the component with hovering prop
+
+      #+begin_src js
+        function withHover(Component) {
+
+          return class WithHover extends React.Component {
+            // add the state and methods as we did for Info
+            state = { hovering: false }
+            mouseOver = () => this.setState({ hovering: true })
+            mouseOut = () => this.setState({ hovering: false })
+
+            // inside render, wrap the Component argument in a div that gets
+            // the mouse events attached as props
             render() {
-              return <Component />
+              return (
+                <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+                  // pass hovering state as a prop to the Component
+                  <Component hovering={this.state.hovering} />
+                </div>
+              );
             }
           }
         }
       #+end_src
 
-      
-    returning to hover state, we want a HOC that helps eliminate the duplication of the following
-    code:
-    #+begin_src js
-    state = { hovering: false }
-    mouseOver = () => this.setState({ hovering: true })
-    mouseOut = () => this.setState({ hovering: false })
-    #+end_src
 
-    
-    let's call this HOC =withHover=, which will then return us a new component that performs its
-    original behavior /and/ the new hovering logic, i.e.:
-    #+begin_src js
-      const InfoWithHover = withHover(Info);
-    #+end_src
+      the react docs describe HOC with the following comparison:
+      #+begin_quote
+       a component transforms props into UI, a higher-order component transforms a component into
+       another component.
+      #+end_quote
 
-    yields the component:
-    #+begin_src js
-      function Info ({ hovering, height }) {
-        return (
-            <>
-            {hovering === true
-             ? <Tooltip id='info' />
-             : null}
-            <svg
-          className="Icon-svg Icon--hoverable-svg"
-          height={height}
-          viewBox="0 0 16 16" width="16">
-            <path d="M9 8a1 1 0 0 0-1-1H5.5a1 1 0 1 0 0 2H7v4a1 1 0 0 0 2 0zM4 0h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4zm4 5.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
-            </svg>
-            </>
-        )
+      wow
+
+**** more HOC details 
+***** naming collisions
+      what if the component being passed already has a prop named =hovering=? a *naming collision* would
+      occur and would probably break the application.
+
+      one solution is to simply enable the naming of the prop to be passed into the component. simply
+      modify our HOC to take one more function, the name of the prop to be added:
+      #+begin_src js
+        function withHover(Component, propName = 'hovering') {  return class WithHover extends React.Component {
+            state = { hovering: false }
+            mouseOver = () => this.setState({ hovering: true })
+            mouseOut = () => this.setState({ hovering: false })
+            render() {
+              const props = { 
+                [propName]: this.state.hovering      
+              }
+              return (
+                  <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+                    <Component {...props} />        
+                  </div>
+              );
+            }
+          }
+        }
+      #+end_src
+
+***** passing other props unrelated to the HOC
+
+      there is another problem with =withHover=: note how =Info= also takes a =height= property, but with
+      the current implementation this will end up as =undefined=. why? because =withHover= is the one
+      rendering =Component=, and we are clearly not passing any other props to =Component= besides
+      =hovering=! So even if we pass the prop to a component returned from =withHover=, while it will
+      exist in the prop, it won't get used:
+      #+begin_src js
+        const InfoWithHover = withHover(Info);
+        // later somewhere else in a render ()
+        return <InfoWithHover height="16px" />;
+      #+end_src
+      looking inside of =InfoWithHover= we see this:
+      #+begin_src js
+        function withHover(Component, propName = 'hovering') {
+          return class WithHover extends React.Component {    
+            state = { hovering: false }    
+            mouseOver = () => this.setState({ hovering: true })    
+            mouseOut = () => this.setState({ hovering: false })    
+
+            render() {      
+              console.log(this.props) // { height: "16px" }      
+              const props = {        
+                [propName]: this.state.hovering      
+              }      
+              return (        
+                  <div onMouseOver={this.mouseOver} 
+                       onMouseOut={this.mouseOut}>          
+                  // we fail to pass it on correctly
+                  <Component {...props} />        
+                  </div>      
+              );    
+            }
+          }
+        }
+      #+end_src
+     
+
+      we can solve this by making sure our computed =props= includes the remainder of the original
+      props passed:
+      #+begin_src js
+        // snip
+        render() {
+          const props = {
+            [propName]: this.state.hovering,
+            // we pass the rest of our props, including `height` here, in the construction
+            // of our new props object
+            ...this.props,
+          }
+
+          return (
+              <div onMouseOver={this.mouseOver} 
+                   onMouseOut={this.mouseOut}>
+                <Component {...props} />
+              </div>
+          );
+        }
+      #+end_src
+
+**** HOC and inversion of control
+
+     when using HOC, there is an *inversion of control* occurring, especially if done with 3rd party
+     libraries.
+
+     using react router as an example, when you pass your component to =withRouter=, react router says
+     it will add =match=, =location=, and =history= props to it. you are, by definition, not creating your
+     own component here. react router is doing it for you, and you have to trust they are doing it as
+     you intended and as they described. It doesn't matter how you define your component, the
+     /resulting component/ returned by react router is the actual component you will be using, and it
+     is react router that ultimately determines how that component renders!
+
+*** render props
+    let's revisit the original problem we tackled with HOC's, but try a different approach now
+
+    recall: we have a bunch of components that we would like to add hover-over functionality to, but
+    would like to reduce the code bloat. here's an example with =Info=:
+    #+begin_src jsx
+      class Info extends React.Component {
+        state = { hovering: false }
+        mouseOver = () => this.setState({ hovering: true })
+        mouseOut = () => this.setState({ hovering: false })
+        render() {
+          return (
+            <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+              {this.state.hovering === true
+                ? <Tooltip id='info' />
+                : null}
+              <svg
+                className="Icon-svg Icon--hoverable-svg"
+                height={this.props.height}
+                viewBox="0 0 16 16" width="16">
+                  <path d="M9 8a1 1 0 0 0-1-1H5.5a1 1 0 1 0 0 2H7v4a1 1 0 0 0 2 0zM4 0h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4zm4 5.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+              </svg>
+            </div>
+          )
+        }
       }
     #+end_src
 
-    =withHover= needs to:
-    - take a component argument
-    - return a new component
-    - render the original component argument, passing it a hovering prop
-
-**** take a component
-
-     #+begin_src js
-       function withHover (Component) {
-         // todo
-       }
-     #+end_src
-
-**** return a new component
-     
-     #+begin_src js
-       function withHover (Component) {
-         return class WithHover extends React.Component {
-          // todo
+**** no ui components
+     most react components have UI rendering as an end goal. for a given component, some piece of UI
+     gets rendered to screen. /however/, that's not universal of all react components. in these cases,
+     we have /"wrapper"/ components that handle some kind of logic but defer the actual rendering to
+     another component and passing it data. ex:
+     #+begin_src jsx
+       class Users extends React.Component {
+         state = {
+           users: null
+         }
+         componentDidMount() {
+           getUsers()
+             .then((users) => {
+               this.setState({ users })
+             })
+         }
+         render() {
+           <Grid data={this.state.users} />
          }
        }
      #+end_src
 
-**** render the component with hovering prop
+     in the above example, =User= acquires the users needed by =Grid= to render, but passes that
+     responsibility to =Grid= itself rather than, like an HOC, handle that logic itself.
 
-     #+begin_src js
-       function withHover(Component) {
+**** passing functions as props
 
-         return class WithHover extends React.Component {
-           // add the state and methods as we did for Info
-           state = { hovering: false }
-           mouseOver = () => this.setState({ hovering: true })
-           mouseOut = () => this.setState({ hovering: false })
-
-           // inside render, wrap the Component argument in a div that gets
-           // the mouse events attached as props
-           render() {
-             return (
-               <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
-                 // pass hovering state as a prop to the Component
-                 <Component hovering={this.state.hovering} />
-               </div>
-             );
-           }
-         }
+     just like any sort of value, it is trivial to pass a function as a prop:
+     #+begin_src jsx
+       // plain data as prop
+       function User (props) {
+         const id = props.id; // ejmg
        }
-     #+end_src
+       <User id="ejmg" />
 
-
-     the react docs describe HOC with the following comparison:
-     #+begin_quote
-      a component transforms props into UI, a higher-order component transforms a component into
-      another component.
-     #+end_quote
-
-     wow
-
-*** more HOC details 
-**** naming collisions
-     what if the component being passed already has a prop named =hovering=? a *naming collision* would
-     occur and would probably break the application.
-
-     one solution is to simply enable the naming of the prop to be passed into the component. simply
-     modify our HOC to take one more function, the name of the prop to be added:
-     #+begin_src js
-       function withHover(Component, propName = 'hovering') {  return class WithHover extends React.Component {
-           state = { hovering: false }
-           mouseOver = () => this.setState({ hovering: true })
-           mouseOut = () => this.setState({ hovering: false })
-           render() {
-             const props = { 
-               [propName]: this.state.hovering      
-             }
-             return (
-                 <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
-                   <Component {...props} />        
-                 </div>
-             );
-           }
-         }
+       // function as prop
+       function User (props) {
+         const id = props.id() // ejmg
        }
-     #+end_src
+       <User id={() => "ejmg"} />
 
-**** passing other props unrelated to the HOC
-
-     there is another problem with =withHover=: note how =Info= also takes a =height= property, but with
-     the current implementation this will end up as =undefined=. why? because =withHover= is the one
-     rendering =Component=, and we are clearly not passing any other props to =Component= besides
-     =hovering=! So even if we pass the prop to a component returned from =withHover=, while it will
-     exist in the prop, it won't get used:
-     #+begin_src js
-       const InfoWithHover = withHover(Info);
-       // later somewhere else in a render ()
-       return <InfoWithHover height="16px" />;
-     #+end_src
-     looking inside of =InfoWithHover= we see this:
-     #+begin_src js
-       function withHover(Component, propName = 'hovering') {
-         return class WithHover extends React.Component {    
-           state = { hovering: false }    
-           mouseOver = () => this.setState({ hovering: true })    
-           mouseOut = () => this.setState({ hovering: false })    
-
-           render() {      
-             console.log(this.props) // { height: "16px" }      
-             const props = {        
-               [propName]: this.state.hovering      
-             }      
-             return (        
-                 <div onMouseOver={this.mouseOver} 
-                      onMouseOut={this.mouseOut}>          
-                 // we fail to pass it on correctly
-                 <Component {...props} />        
-                 </div>      
-             );    
-           }
-         }
+       // passing an arg
+       function User(props) {
+         const hello = props.hello("ejmg"); // hello, ejmg
        }
+       <User hello={(name) => `hello, ${name}`} />
      #+end_src
-     
 
-     we can solve this by making sure our computed =props= includes the remainder of the original
-     props passed:
-     #+begin_src js
-       // snip
-       render() {
-         const props = {
-           [propName]: this.state.hovering,
-           // we pass the rest of our props, including `height` here, in the construction
-           // of our new props object
-           ...this.props,
-         }
+**** wrapper component
 
-         return (
-             <div onMouseOver={this.mouseOver} 
-                  onMouseOut={this.mouseOut}>
-               <Component {...props} />
+     taking non-ui components and passing functions as props together we can solve the code
+     redundancy issue with our hover ui.
+
+     first, let's make a =Hover= component that contains all the logic we don't wish to duplicate:
+     #+begin_src jsx
+       class Hover extends React.Component {
+         state = { hovering: false };
+         mouseOver = () => this.setState({ hovering: true })
+         mouseOut = () => this.setState({ hovering: false })
+         render () {
+           return (
+             <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
              </div>
+           );
+         }
+       }
+     #+end_src
+
+     now, *give =Hover= a prop =render= that tells it what to render!* we can then pass to =render= the
+     =hovering= state so it can decide when to render what.
+     #+begin_src jsx
+       <Hover render={(hovering) => {
+         <div>
+           is hovering? { hovering === true ? "yes" : "no" }
+         </div>
+         }
+       />
+     #+end_src
+
+     now =Hover= will have a prop called =render= that it can call as a function. putting this knowledge
+     to work, here's the full implementation::
+     #+begin_src jsx
+       class Hover extends React.Component {
+         state = { hovering: false }
+         mouseOver = () => this.setState({ hovering: true })
+         mouseOut = () => this.setState({ hovering: false })
+         render() {
+           return (
+             <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+               {this.props.render(this.state.hovering)}
+             </div>
+           )
+         }
+       }
+     #+end_src
+
+     any time we need a component to be aware of its hover state, we just wrap it inside of =Hover='s
+     =render= prop. this enables us to compose the components without having to juggle ownership of
+     control over render logic like HOC's!
+
+     taking the above and now applying it to =Info= we get:
+     #+begin_src jsx
+       class Hover extends React.Component {
+         state = { hovering: false }
+         mouseOver = () => this.setState({ hovering: true })
+         mouseOut = () => this.setState({ hovering: false })
+         render() {
+           return (
+             <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+               {this.props.render(this.state.hovering)}
+             </div>
+           )
+         }
+       }
+
+       function Info (props) {
+         return (
+           <>
+             {props.hovering === true
+               ? <Tooltip id='info' />
+               : null}
+             <svg
+               className="Icon-svg Icon--hoverable-svg"
+               height={props.height}
+               viewBox="0 0 16 16" width="16">
+                 <path d="M9 8a1 1 0 0 0-1-1H5.5a1 1 0 1 0 0 2H7v4a1 1 0 0 0 2 0zM4 0h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4zm4 5.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+             </svg>
+           </>
+         )
+       }
+
+       function App () {
+         return (
+           <>
+             <Hover render={(hovering) =>
+               <Info hovering={hovering} />
+             }/>
+           </>
          );
        }
      #+end_src
 
-*** HOC and inversion of control
+     this is formally called the *Render Props* pattern in react. the react docs describe it as *"a
+     technique for sharing code between React components using a prop whose value is a function"*.
 
-    when using HOC, there is an *inversion of control* occurring, especially if done with 3rd party
-    libraries.
+**** Render Props and children
 
-    using react router as an example, when you pass your component to =withRouter=, react router says
-    it will add =match=, =location=, and =history= props to it. you are, by definition, not creating your
-    own component here. react router is doing it for you, and you have to trust they are doing it as
-    you intended and as they described. It doesn't matter how you define your component, the
-    /resulting component/ returned by react router is the actual component you will be using, and it
-    is react router that ultimately determines how that component renders!
+     When we wrap content between Component tags, we can access that nested content via
+     =props.children=:
+     #+begin_src jsx
+       function User (props) {
+         return (
+           <div>
+             { props.children }
+           </div>
+         );
+       }
+       <User>
+         this is props.children
+       </User>
+     #+end_src
+
+     this will yield us a UI with one div and "this is props.children" in it.
+
+     now, *what if =props.children= was passed a function*?
+     #+begin_src jsx
+       function User (props) {
+         return (
+           <div>
+             {props.children()}    </div>
+         )
+       }
+
+       <User>
+         {() => This is props.children}</User>
+     #+end_src
+
+     /it works!/
+
+     combine this with our previous solution for =Hover= now yields:
+     #+begin_src jsx
+       class Hover extends React.Component {
+         state = { hovering: false }
+         mouseOver = () => this.setState({ hovering: true })
+         mouseOut = () => this.setState({ hovering: false })
+         render() {
+           return (
+             <div onMouseOver={this.mouseOver} onMouseOut={this.mouseOut}>
+               {this.props.children(this.state.hovering)}      </div>
+           )
+         }
+       }
+
+       function App () {
+         return (
+           <>
+             <Hover>
+               {(hovering) => <Info hovering={hovering} />}
+             </Hover>
+
+             <Hover>
+               {(hovering) => <TrendChart hovering={hovering} />}
+             </Hover>
+
+             <Hover>
+               {(hovering) => <DailyChart hovering={hovering} />}
+             </Hover>
+           </>
+         )
+       }
+     #+end_src
+
+     which approach is better is a matter of taste.
+
+**** Render Props and Inversion of Control
+
+     *There is none! wham-o!*
+     #+begin_src jsx
+       <Hover>
+         {(hovering) => {
+           // We can do whatever we want here.
+           // We decide how and when to render the component
+           return <Info anyNameWeWant={hovering} />
+         }}
+       </Hover>
+     #+end_src
